--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Edu+AU+VIC+WA+NT+Arrows:wght@400..700&family=Poetsen+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Edu+AU+VIC+WA+NT+Arrows:wght@400..700&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Poetsen+One&display=swap" rel="stylesheet">
 </head>
 <body>
    
@@ -22,16 +22,16 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>                        
           </button>
-          <a class="navbar-brand" href="#">Laura C. Castro Guimaraes</a>
+          <a class="navbar-brand" href="https://cigarraa.github.io/tim-bernners-lee/">Laura C. Castro Guimaraes</a>
         </div>
 
         <div class="collapse navbar-collapse" id="myNavbar">
         <ul class="nav navbar-nav">
-            <li class="links"><a href="#welcome">inicio</a></li>
-            <li class="links"><a href="#videos">videos</a></li>
-            <li class="links"><a href="#trabalhos">trabalhos</a></li>
-            <li class="links"><a href="#escritos">escritos</a></li>
-            <li class="links"><a href="#contato">contato</a></li>
+            <li><a href="#welcome">inicio</a></li>
+            <li ><a href="#videos">videos</a></li>
+            <li ><a href="#trabalhos">trabalhos</a></li>
+            <li ><a href="#escritos">escritos</a></li>
+            <li ><a href="#contato">contato</a></li>
         </ul>    
     </div>
     
